// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar WorkflowListNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar"
  >
    <div
      className="navbar-brand d-flex flex-row align-items-center"
    >
      <img
        className="logo"
        src="/static/images/logo.png"
      />
      <h1
        className="mb-0 mr-auto title-2"
      >
        <a
          href="http://cjworkbench.org"
        >
          Workbench
        </a>
      </h1>
    </div>
    <div
      className="d-flex flex-row align-items-center"
    >
      <a
        className="t-white content-2 mr-5"
        href="http://cjworkbench.org/index.php/blog/"
      >
        Learn
      </a>
      <WfHamburgerMenu />
    </div>
  </nav>
</div>
`;

exports[`NavBar WorkflowNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar"
  >
    <div
      className="navbar-brand d-flex flex-row align-items-center"
    >
      <img
        className="logo"
        src="/static/images/logo.png"
      />
      <h1
        className="mb-0 mr-auto title-2"
      >
        <a
          href="http://cjworkbench.org"
        >
          Workbench
        </a>
      </h1>
    </div>
    <div
      className="d-flex flex-row align-items-center"
    >
      <a
        className="t-white content-2 mr-5"
        href="http://cjworkbench.org/index.php/blog/"
      >
        Learn
      </a>
      <WfHamburgerMenu
        api={Object {}}
        isReadOnly={false}
        workflowId={1}
      />
    </div>
  </nav>
</div>
`;
